puavomenu: Make development mode the default mode, so blindly running puavomenu does not break the already-running menu. Use --prod to start the production mode instance.

--- a/parts/puavomenu/puavomenu.desktop
+++ b/parts/puavomenu/puavomenu.desktop
@@ -2,7 +2,7 @@
 Version=1.0
 Name=Puavomenu launch
 Comment=A desktop menu application
-Exec=/opt/puavomenu/launch
+Exec=/opt/puavomenu/launch --prod
 Terminal=false
 Type=Application
 Categories=Utility;
