Fix Cura launcher.

--- a/rules/puavomenu/templates/menudata.yaml
+++ b/rules/puavomenu/templates/menudata.yaml
@@ -791,7 +791,7 @@ menus:
             - simple-scan
             - xsane
             - blender
-            - cura
+            - cura-appimage
             - sketchup
             - freecad
             - openscad-nightly
