puavomenu: Hide Steam by default

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -745,6 +745,7 @@ programs:
   - spotify:
         tags: default
   - steam:
+        hidden_by_default: true
         tags: default
   - stellarium:
         name:
