--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -1198,6 +1198,7 @@ menus:
             en: Programs for Grading Environment
             de: Programme der Prüfungsumgebung
         icon: /usr/share/icons/oxygen/base/48x48/categories/applications-education.png
+        hidden_by_default: true
         programs:
             - gimp
             - pinta
