Add "puavo-pkg-update", an "apt"-like tool for puavo-pkg (which is like "dpkg").  Looks up puavo.pkg.* "puavo-conf"-values to see what puavo-pkgs should be installed, prepared or removed, and keeps them up-to-date according to such specs.

--- a/parts/pkg/Makefile
+++ b/parts/pkg/Makefile
@@ -30,6 +30,7 @@ install: installdirs
 
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(sbindir) \
 		puavo-pkg \
+		puavo-pkg-update \
 		puavo-test-puavo-pkg-installers
 
 	$(INSTALL_DATA) -t $(DESTDIR)$(sysconfdir)/puavo-pkg \
