Give Steam its own tag, so we can control it precisely

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -745,8 +745,7 @@ programs:
   - spotify:
         tags: default
   - steam:
-        hidden_by_default: true
-        tags: default
+        tags: steam
   - stellarium:
         name:
             en: Stellarium-planetarium
