Increase /proc/sys/fs/inotify/max_user_watches to 1048576 when starting up puavo-sharedir-manager so it can work properly with a relatively large number of files.

--- a/parts/sharedir/manager/systemd/puavo-sharedir-manager.service
+++ b/parts/sharedir/manager/systemd/puavo-sharedir-manager.service
@@ -7,4 +7,5 @@ After=slapd.service
 WantedBy=multi-user.target
 
 [Service]
+ExecStartPre=/bin/sh -c 'echo 1048576 > /proc/sys/fs/inotify/max_user_watches'
 ExecStart=/usr/sbin/puavo-sharedir-manager
