--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -305,7 +305,7 @@ programs:
   - kamerka:
         icon: /usr/share/icons/Faenza/devices/96/camera-web.png
         tags: default
-  - kcalc:
+  - org.kde.kcalc:
         tags: default
   - kenavision:
         name: Kena Vision Microscope
@@ -1212,7 +1212,7 @@ menus:
             - geogebra
             - geogebra6
             - wxMaxima
-            - kcalc
+            - org.kde.kcalc
             - ti_nspire_cx_cas_ss
             - LoggerPro
             - dia
