--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -99,7 +99,8 @@ Depends: ${misc:Depends},
  puavo-conf,
  ruby,
  scrot,
- xautomation (>= 1.05)
+ xautomation (>= 1.05),
+ xdotool
 Description: Automatic Puavo Desktop testing tool
  Provides scripts for testing various parts of Puavo desktop.
  .
@@ -375,7 +376,8 @@ Depends: ${misc:Depends},
  python3,
  python3-yaml,
  python3-xlib,
- puavo-webwindow
+ puavo-webwindow,
+ xdotool
 Description: PuavoMenu is a desktop menu for starting up programs.
  PuavoMenu is a desktop menu for starting up programs
  .
