--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -478,6 +478,7 @@ programs:
             sv: Periodsystem
             de: Periodensystem
         tags: default, education, science
+        command: kalzium
   - org.kde.kbruch:
         tags: default
   - org.kde.kdenlive:
