Fix Okular launcher.

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -432,6 +432,7 @@ programs:
           sv: Okular-dokumentläsare
           de: Okular Dokumentenbetrachter
         keywords: pdf
+        command: okular
         tags: default, office
   - onboard:
         tags: default
