Do not try to build a newer version of "unicode-data" on Buster.

--- a/debs/Makefile
+++ b/debs/Makefile
@@ -1,5 +1,10 @@
 # a newer version of unicode-data is a dependency for wine
-_pkgs_builddeps := unicode-data
+# (on Stretch)
+ifeq "$(debootstrap_suite)" "stretch"
+  _pkgs_builddeps := unicode-data
+else
+  _pkgs_builddeps :=
+endif
 
 # parts, ports and some cloud packages go into puavo-os images
 
