Do not try to build iivari-client currently, does not build on Buster because python-pyside is missing.

--- a/debs/puavo-os/debian/rules
+++ b/debs/puavo-os/debian/rules
@@ -67,9 +67,10 @@ override_dh_auto_install:
 		install prefix=/usr sysconfdir=/etc		\
 		DESTDIR=$(CURDIR)/debian/puavo-hw-tools
 
-	$(MAKE) -C iivari/client \
-		install prefix=/usr sysconfdir=/etc \
-		DESTDIR=$(CURDIR)/debian/iivari-client
+#       XXX disabled, because not building in Buster
+#	$(MAKE) -C iivari/client \
+#		install prefix=/usr sysconfdir=/etc \
+#		DESTDIR=$(CURDIR)/debian/iivari-client
 
 	$(MAKE) -C ltsp/bootserver			\
 		install prefix=/usr sysconfdir=/etc		\
