"python-appindicator" is currently missing on Buster.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -1,5 +1,6 @@
-# XXX python-pyside should be in puavo-os Build-Depends for iivari-client,
+# XXX "python-pyside" should be in puavo-os Build-Depends for iivari-client,
 # XXX but removed because it was not installable on Buster on 2019-03-19.
+# XXX python-appindicator should be in puavo-ltsp-install Depends
 
 Source: puavo-os
 Section: misc
@@ -345,7 +346,6 @@ Depends: ${misc:Depends},
  puavo-pkg,
  pv,
  python,
- python-appindicator,
  python-dbus,
  python-gtk2,
  python-notify,
