--- a/debs/openldap/debian/control
+++ b/debs/openldap/debian/control
@@ -2,40 +2,30 @@ Source: openldap
 Section: net
 Priority: optional
 Maintainer: Debian OpenLDAP Maintainers <pkg-openldap-devel@lists.alioth.debian.org>
-Uploaders: Roland Bauerschmidt <rb@debian.org>,
- Steve Langasek <vorlon@debian.org>,
+Uploaders: Steve Langasek <vorlon@debian.org>,
  Torsten Landschoff <torsten@debian.org>,
- Matthijs Möhlmann <matthijs@cacholong.nl>,
- Timo Aaltonen <tjaalton@ubuntu.com>,
  Ryan Tandy <ryan@nardis.ca>
-Build-Depends: debhelper (>= 9.20150501),
-               dh-autoreconf,
+Build-Depends: debhelper (>= 10),
                dpkg-dev (>= 1.17.14),
                groff-base,
-               heimdal-multidev <!stage1>,
-               krb5-multidev,
+               heimdal-multidev (>= 7.4.0.dfsg.1-1~) <!stage1>,
                libdb5.3-dev <!stage1>,
-               libkrb5-dev <!stage1>,
+               libgnutls28-dev,
                libltdl-dev <!stage1>,
                libperl-dev (>= 5.8.0) <!stage1>,
                libsasl2-dev,
-               libssl1.0-dev,
                libwrap0-dev <!stage1>,
                nettle-dev <!stage1>,
                perl:any,
                po-debconf,
-               quilt,
-               time <!stage1>,
                unixodbc-dev <!stage1>
 Build-Conflicts: libbind-dev, bind-dev, libicu-dev, autoconf2.13
-Standards-Version: 3.9.8
+Standards-Version: 4.3.0
 Homepage: http://www.openldap.org/
-Vcs-Git: https://anonscm.debian.org/git/pkg-openldap/openldap.git
-Vcs-Browser: https://anonscm.debian.org/git/pkg-openldap/openldap.git
+Vcs-Git: https://salsa.debian.org/openldap-team/openldap.git
+Vcs-Browser: https://salsa.debian.org/openldap-team/openldap
 
 Package: slapd
-Section: net
-Priority: optional
 Architecture: any
 Build-Profiles: <!stage1>
 Pre-Depends: debconf (>= 0.5) | debconf-2.0, ${misc:Pre-Depends}
@@ -53,21 +43,29 @@ Description: OpenLDAP server (slapd)
  (slapd). The server can be used to provide a standalone directory
  service.
 
-Package: slapd-smbk5pwd
-Section: net
-Priority: extra
+Package: slapd-contrib
 Architecture: any
 Build-Profiles: <!stage1>
 Depends: slapd (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-Description: Keeps Samba and Kerberos passwords in sync within slapd.
- Extends the PasswordModify Extended Operation to update Kerberos keys
- and Samba password hashes for an LDAP user. The Kerberos support is
- written for Heimdal using its hdb-ldap backend. The Samba support is
- written using the Samba 3.0 LDAP schema.
+Provides: slapd-smbk5pwd
+Breaks: slapd-smbk5pwd (<< 2.4.47+dfsg-2~)
+Replaces: slapd-smbk5pwd (<< 2.4.47+dfsg-2~)
+Description: contributed plugins for OpenLDAP slapd
+ This package contains a number of slapd overlays and plugins contributed by
+ the OpenLDAP community. While distributed as part of OpenLDAP Software, they
+ are not necessarily supported by the OpenLDAP Project.
+
+Package: slapd-smbk5pwd
+Architecture: all
+Section: oldlibs
+Build-Profiles: <!stage1>
+Depends: slapd-contrib, ${misc:Depends}
+Breaks: slapd (<< 2.4.47+dfsg-2~)
+Description: transitional package for slapd-contrib
+ This is a transitional package from slapd-smbk5pwd to slapd-contrib. It can be
+ safely removed.
 
 Package: ldap-utils
-Section: net
-Priority: optional
 Architecture: any
 Depends: ${shlibs:Depends}, libldap-2.4-2 (= ${binary:Version}), ${misc:Depends}
 Recommends: libsasl2-modules
@@ -83,12 +81,11 @@ Description: OpenLDAP utilities
 
 Package: libldap-2.4-2
 Section: libs
-Priority: standard
 Architecture: any
 Multi-Arch: same
 Conflicts: ldap-utils (<= 2.1.23-1)
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}, libldap-common (= ${source:Version})
+Depends: ${shlibs:Depends}, ${misc:Depends}, libldap-common
 Replaces: libldap2, libldap-2.3-0
 Description: OpenLDAP libraries 
  These are the run-time libraries for the OpenLDAP (Lightweight Directory
@@ -96,7 +93,6 @@ Description: OpenLDAP libraries
 
 Package: libldap-common
 Section: libs
-Priority: standard
 Architecture: all
 Multi-Arch: foreign
 Depends: ${misc:Depends}
@@ -105,22 +101,8 @@ Description: OpenLDAP common files for libraries
  These are common files for the run-time libraries for the OpenLDAP
  (Lightweight Directory Access Protocol) servers and clients.
 
-Package: libldap-2.4-2-dbg
-Section: debug
-Priority: extra
-Architecture: any
-Multi-Arch: same
-Depends: libldap-2.4-2 (= ${binary:Version}), ${misc:Depends}
-Description: Debugging information for OpenLDAP libraries
- This package provides detached debugging information for the OpenLDAP
- (Lightweight Directory Access Protocol) libraries. It is useful
- primarily to permit better backtraces and crash dump analysis after
- problems with the libraries. GDB will find this debug information
- automatically.
-
 Package: libldap2-dev
 Section: libdevel
-Priority: extra
 Architecture: any
 Multi-Arch: same
 Conflicts: libldap-dev, libopenldap-dev
@@ -132,25 +114,12 @@ Description: OpenLDAP development libraries
  libraries. It includes headers, libraries and links to allow static and
  dynamic linking.
 
-Package: slapd-dbg
-Section: debug
-Priority: extra
+Package: slapi-dev
+Section: libdevel
 Architecture: any
 Build-Profiles: <!stage1>
 Depends: slapd (= ${binary:Version}), ${misc:Depends}
-Description: Debugging information for the OpenLDAP server (slapd)
- This package provides detached debugging information for the OpenLDAP
- (Lightweight Directory Access Protocol) server (slapd). It is useful
- primarily to permit better backtraces and crash dump analysis after
- problems with the libraries. GDB will find this debug information
- automatically.
-
-Package: slapd-smbkrb5pwd
-Section: net
-Priority: optional
-Architecture: any
-Pre-Depends: debconf (>= 0.5) | debconf-2.0
-Depends: ${shlibs:Depends}, libkrb5-3, slapd, ${misc:Depends}
-Description: Samba / MIT Kerberos password overlay module for slapd
- smbkrb5pwd extends password change operations to synchronously change
- passwords in MIT Kerberos and Samba.
+Description: development libraries for OpenLDAP SLAPI plugin interface
+ This package allows development of plugins for the OpenLDAP slapd server
+ using the SLAPI interface.  It includes the headers and libraries needed
+ to build such plugins.
